# qr-filetransfer-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  ConanWrapper.cmake  LICENSE  README.md  build.bat  build.sh  build_cmake.bat  build_cmake.ps1  build_cmake.sh  build_mason.ps1  build_meson.ps1  build_meson.sh  clean.bat  clean.sh  clean_build.bat  conanfile.txt  meson.build
.github/workflows/: buildWithCmake.yml  buildWithMeson.yml
conan_profiles/: gcc10_armv7_linux.profile  readme.txt  vs2008_x86.profile  vs2017_x64.profile  vs2019_x64.profile  vs2022_x64.profile
src/: .clang-format  CMakeLists.txt  ConnectionListener.h  Connections.cpp  Connections.h  CustomLogger.h  Server.cpp  Server.h  Util.h  htmldata.hpp  main.cpp
src/posix_specific/: InterfacesLister.h
src/win32_specific/: InterfacesLister.h
test/: runtest.py
vscode_template/: c_cpp_properties.json  settings.json  tasks.json
